<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="72dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_storage_black" />

        <Button
            android:id="@+id/btnHuffman"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="12dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_button"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/huffman"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnRunLength"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textSize="18sp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_button"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/run_length"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>